projects/compiler/test/typechecker/try/error_else_return_type_mismatch.1.out
Error at %FILE_NAME%:4:36
Type mismatch for parameter 'error'
  |    val x = try ok() else return Err("asdf")
                                        ^
Expected: Int
but instead found: String
