projects/compiler/test/typechecker/try/error_else_return_type_mismatch.1.abra
func ok(): Result<Int, String> = Ok(123)

func f1(): Result<Int, Int> {
  val x = try ok() else return Err("asdf")

  Ok(x + 1)
}